force-app/main/default/objects/Receipt__c/Receipt__c.object-meta.xml
<CustomObject>
    <label>Receipt</label>
    <nameField>
        <displayFormat>RV-{0}</displayFormat>
        <label>Journal No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Receipts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>