force-app/main/default/objects/Receipt__c/fields/Deposited_To__c.field-meta.xml
<CustomField>
    <fullName>Deposited_To__c</fullName>
    <label>Deposited To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Emirates NBD - AED</fullName>
            </value>
            <value>
                <fullName>Emirates NBD - USD</fullName>
            </value>
            <value>
                <fullName>Emirates NBD - EUR</fullName>
            </value>
            <value>
                <fullName>Emirates NBD - CHF</fullName>
            </value>
            <value>
                <fullName>Emirates NBD Escrow – Bentley</fullName>
            </value>
            <value>
                <fullName>Emirates Islamic - AED</fullName>
            </value>
            <value>
                <fullName>Emirates Islamic Escrow - TR1</fullName>
            </value>
            <value>
                <fullName>Emirates Islamic Escrow - TR2</fullName>
            </value>
            <value>
                <fullName>Emirates Islamic - USD - Verde</fullName>
            </value>
            <value>
                <fullName>Emirates Islamic - EUR - Verde</fullName>
            </value>
            <value>
                <fullName>Emirates Islamic - AED - Verde</fullName>
            </value>
            <value>
                <fullName>Abu Dhabi Islamic - AED</fullName>
            </value>
            <value>
                <fullName>Abu Dhabi Islamic Escrow - GFF</fullName>
            </value>
            <value>
                <fullName>Abu Dhabi Islamic - EURO</fullName>
            </value>
            <value>
                <fullName>Abu Dhabi Islamic - USD</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>