force-app/main/default/objects/Receipt__c/fields/Management_Payment__c.field-meta.xml
<CustomField>
    <fullName>Management_Payment__c</fullName>
    <label>Management Payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mr. Timur</fullName>
            </value>
            <value>
                <fullName>Mr. Muaeed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>