force-app/main/default/objects/Receipt__c/fields/Project_Unit__c.field-meta.xml
<CustomField>
    <fullName>Project_Unit__c</fullName>
    <formula>Project_Name__c &amp;&quot; - &quot;&amp; Unit_Building__c &amp; Unit_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project &amp; Unit</label>
    <type>Text</type>
</CustomField>