force-app/main/default/objects/Receipt__c/fields/Project_Voucher_Code__c.field-meta.xml
<CustomField>
    <fullName>Project_Voucher_Code__c</fullName>
    <formula>Unit__r.Project__r.Voucher_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Voucher Code</label>
    <type>Text</type>
</CustomField>