force-app/main/default/objects/Receipt__c/fields/Receipt_Added_Date__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Added_Date__c</fullName>
    <label>Receipt Added Date</label>
    <type>Date</type>
</CustomField>