force-app/main/default/objects/Receipt__c/fields/Unit_Building__c.field-meta.xml
<CustomField>
    <fullName>Unit_Building__c</fullName>
    <label>Unit Building</label>
    <length>50</length>
    <type>Text</type>
</CustomField>