force-app/main/default/objects/Receipt__c/fields/Unit_No__c.field-meta.xml
<CustomField>
    <fullName>Unit_No__c</fullName>
    <label>Unit No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>