force-app/main/default/objects/Receipt__c/fields/Voucher_Number__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Number__c</fullName>
    <formula>&apos;RV-&apos;&amp;Unit__r.Project__r.Voucher_Code__c&amp;&apos;-&apos;&amp;
IF(Unit__r.Project_Name_F__c == &apos;MIRA Villas Designed by Bentley Home&apos;,
  TEXT(Voucher_Number_To_Process_Bentley__c),
  IF(Unit__r.Project_Name_F__c == &apos;Trussardi Residences&apos;,
    TEXT(Voucher_Number_To_Process_Trussardi__c),
    IF(Unit__r.Project_Name_F__c == &apos;Trussardi Residences 2&apos;,
      TEXT(Voucher_Number_To_Process_Trussardi2__c),
      IF(Unit__r.Project_Name_F__c == &apos;GIANFRANCO FERRE RESIDENCES&apos;,
        TEXT(Voucher_Number_To_Process_Gianfranco__c),
        IF(Unit__r.Project_Name_F__c == &apos;Trussardi Residences 2 Offices&apos;,
          TEXT(Voucher_Number_To_Process_T2_Offices__c),
          IF(Unit__r.Project_Name_F__c == &apos;John Richmond Residences&apos;,
            TEXT(Voucher_Number_To_Process_Richmond__c),
            IF(Unit__r.Project_Name_F__c == &apos;Trussardi Residences MIRA VERDE&apos;,
              TEXT(Voucher_Number_To_Process_MIRA_VERDE__c),
              TEXT(Voucher_Number_To_Process_POST__c)
            )
          )
        )
      )
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Voucher#</label>
    <type>Text</type>
</CustomField>