force-app/main/default/objects/Receipt__c/fields/Voucher_Number_Retail__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Number_Retail__c</fullName>
    <formula>IF(Unit__r.Project_Name_F__c == &apos;Trussardi Residences 2 Offices&apos; &amp;&amp; TEXT(Unit__r.Type__c) == &apos;Retail&apos;,
    &apos;RV-TR2-Retail&apos;&amp;&apos;-&apos; &amp; TEXT(Voucher_Number_To_Process_T2_Offices__c),
    Voucher_Number__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Voucher Number Retail</label>
    <type>Text</type>
</CustomField>