force-app/main/default/objects/Receipt__c/fields/Voucher_Number_To_Process__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Number_To_Process__c</fullName>
    <label>Voucher Number To Process</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>