force-app/main/default/objects/Receipt__c/fields/Voucher_Number_To_Process_Gianfranco__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Number_To_Process_Gianfranco__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Voucher Number To Process Gianfranco</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>