force-app/main/default/objects/Receipt__c/fields/Voucher_Number_To_Process_T2_Offices__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Number_To_Process_T2_Offices__c</fullName>
    <label>Voucher Number To Process T2 Offices</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>