force-app/main/default/objects/Receipt__c/fields/Voucher_Seq__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Seq__c</fullName>
    <inlineHelpText>Per-project voucher sequence number, assigned on insert by ReceiptTriggerHelper. Drives the Voucher_Number__c formula. Replaces the per-project Voucher_Number_To_Process_* fields.</inlineHelpText>
    <label>Voucher Seq</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>