force-app/main/default/objects/Receipt__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Voucher_Number__c</columns>
    <columns>Unit_Number__c</columns>
    <columns>Account__c</columns>
    <columns>Received_Amount__c</columns>
    <columns>Payment_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project_Name__c</field>
        <operation>equals</operation>
        <value>GIANFRANCO FERRE RESIDENCES</value>
    </filters>
    <filters>
        <field>Unit_Number__c</field>
        <operation>equals</operation>
        <value>912</value>
    </filters>
    <label>All</label>
</ListView>